[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/icon pack/png/010-user.png" type="Texture" id=1]
[ext_resource path="res://art/icon pack/png/018-location pin.png" type="Texture" id=2]
[ext_resource path="res://fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/Roboto/Roboto-Light.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://art/icon pack/png/002-like.png" type="Texture" id=5]
[ext_resource path="res://art/icon pack/png/015-poll.png" type="Texture" id=6]
[ext_resource path="res://scenes/cards/HBoxContainer.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.866667, 0.866667, 0.866667, 1 )
shadow_color = Color( 0, 0, 0, 0.560784 )
shadow_size = 10

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 4 )

[node name="card_template" type="HBoxContainer"]
margin_right = 1088.0
margin_bottom = 330.0
rect_min_size = Vector2( 0, 330 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
number = "+91 "
card_name = NodePath("VBoxContainer/Panel/card_info/card_details/name")
card_location = NodePath("VBoxContainer/Panel/card_info/card_details/location_box/location")
card_start_up = NodePath("VBoxContainer/Panel/card_info/card_details/startup_captio")

[node name="spacer" type="Control" parent="."]
margin_right = 15.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 19.0
margin_right = 1069.0
margin_bottom = 330.0
rect_min_size = Vector2( 1050, 330 )

[node name="spacer" type="Control" parent="VBoxContainer"]
margin_right = 1050.0
margin_bottom = 11.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_top = 15.0
margin_right = 1050.0
margin_bottom = 315.0
rect_min_size = Vector2( 1000, 300 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="card_info" type="HBoxContainer" parent="VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="VBoxContainer/Panel/card_info"]
margin_right = 170.0
margin_bottom = 220.0
rect_min_size = Vector2( 170, 220 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="HSeparator" type="VSeparator" parent="VBoxContainer/Panel/card_info"]
margin_left = 174.0
margin_right = 224.0
margin_bottom = 220.0
rect_min_size = Vector2( 50, 220 )
custom_styles/separator = SubResource( 2 )

[node name="card_details" type="VBoxContainer" parent="VBoxContainer/Panel/card_info"]
margin_left = 228.0
margin_right = 866.0
margin_bottom = 220.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="name" type="Label" parent="VBoxContainer/Panel/card_info/card_details"]
margin_right = 638.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
valign = 1

[node name="location_box" type="HBoxContainer" parent="VBoxContainer/Panel/card_info/card_details"]
margin_top = 99.0
margin_right = 638.0
margin_bottom = 149.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="loc_icon" type="TextureRect" parent="VBoxContainer/Panel/card_info/card_details/location_box"]
modulate = Color( 0, 0, 0, 0.921569 )
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="location" type="Label" parent="VBoxContainer/Panel/card_info/card_details/location_box"]
margin_left = 54.0
margin_right = 638.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
valign = 1
uppercase = true

[node name="startup_captio" type="Label" parent="VBoxContainer/Panel/card_info/card_details"]
margin_top = 153.0
margin_right = 638.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
valign = 1
autowrap = true

[node name="contact_box" type="VBoxContainer" parent="VBoxContainer/Panel/card_info"]
margin_left = 870.0
margin_right = 970.0
margin_bottom = 220.0
mouse_filter = 2

[node name="contact" type="TextureButton" parent="VBoxContainer/Panel/card_info/contact_box"]
modulate = Color( 1, 1, 1, 0.921569 )
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="spacer" type="Control" parent="VBoxContainer/Panel/card_info/contact_box"]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="like" type="TextureButton" parent="VBoxContainer/Panel/card_info/contact_box"]
modulate = Color( 1, 1, 1, 0.921569 )
margin_top = 120.0
margin_right = 100.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="spacer2" type="Control" parent="VBoxContainer"]
margin_top = 319.0
margin_right = 1050.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="spacer2" type="Control" parent="."]
margin_left = 1073.0
margin_right = 1088.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="pressed" from="VBoxContainer/Panel/card_info/contact_box/contact" to="." method="_on_contact_pressed"]
[connection signal="pressed" from="VBoxContainer/Panel/card_info/contact_box/like" to="." method="_on_like_pressed"]
